<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@null"
    tools:background="@color/color_88000000">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="@drawable/xml_btn_edge_ffffff">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:textColor="@color/White"
            android:textSize="16sp"
            android:text="@string/Setting"
            android:background="@drawable/xml_top_edge_d44001"/>

        <TextView
            android:id="@+id/btn_battery"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/White"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:text="@string/Battery_save_mode"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e3e3e3"/>

        <TextView
            android:id="@+id/btn_prev"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/White"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:text="@string/Prev"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e3e3e3"/>

        <TextView
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/White"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:text="@string/Next"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e3e3e3"/>

        <TextView
            android:id="@+id/btn_favorite"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/White"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:text="@string/Add_Favorite"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e3e3e3"/>

        <TextView
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/White"
            android:gravity="center"
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:text="@string/left_menu_2"/>

        <TextView
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/xml_bottom_edge_f2f2f2"
            android:gravity="center"
            android:textColor="#a3a3a3"
            android:textSize="16sp"
            android:text="@string/Close"/>



    </LinearLayout>
</RelativeLayout>