<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:background="@drawable/btn_bg">

    <TextView
        android:id="@+id/btn_play_selected_song"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/xml_btn_edge_d44001"
        android:textColor="@color/White"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/play_selected_songs"/>

    <TextView
        android:id="@+id/btn_all_select"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:background="@drawable/xml_btn_edge_d44001"
        android:textColor="@color/White"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/select_all"/>

    <TextView
        android:id="@+id/btn_save_storage"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:background="@drawable/xml_btn_edge_d44001"
        android:textColor="@color/White"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/save_storage"/>


</LinearLayout>
