<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88000000">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="@color/White">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/White"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/policy_dialog_title"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:gravity="start"
            android:textColor="@color/color_2c2c2c"
            android:textSize="15sp"
            android:text="@string/policy_dialog_comments"/>

        <Button
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:textColor="@color/White"
            android:text="@string/Done"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

</RelativeLayout>