<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@null"
    tools:background="@color/color_88000000">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/xml_btn_edge_ffffff"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/color_2c2c2c"
            android:text="@string/title_permittion_guide"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="13sp"
            android:textColor="@color/color_2c2c2c"
            android:text="@string/message_permission_guide"/>

        <Button
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/White"
            android:text="@string/title_permission_positive_btn"
            android:textStyle="bold"
            android:background="#0b9c2a"
            android:visibility="visible" />
    </LinearLayout>
</RelativeLayout>