<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88000000">

    <RelativeLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/White">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/progress_bar"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/left_menu_4"
            android:textColor="@color/White"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:visibility="visible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:layout_marginTop="60dp"
            android:paddingStart="22dp"
            android:paddingEnd="22dp">

            <TextView
                android:id="@+id/tv_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="end"
                android:text="@string/Small"
                android:textColor="#0c0c0c"
                android:textSize="12sp"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="start"
                android:text="@string/Large"
                android:textColor="#0c0c0c"
                android:textSize="16sp"
                android:visibility="visible"
                tools:visibility="visible" />

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_toStartOf="@id/tv_big"
                android:layout_toEndOf="@id/tv_small"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="189dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#efefef">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/Cancel"
                    android:textColor="#bababa"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_apply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/White">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/Done"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="189dp"
            android:background="#f2f2f2" />


    </RelativeLayout>
</RelativeLayout>